--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "gacha": "node gacha-cli.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
